tests/proc-macro-tests/tests/expand/fail/panicking_attribute_macro.err.txt
error: custom attribute panicked
 --> /tests/expand/fail/panicking_attribute_macro.rs:4:1
  |
4 | #[my_proc_macro_attribute_panics]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: test
